--- a/docs/02-app/index.mdx
+++ b/docs/02-app/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: App Router
+title: App Router **cristiano Ronaldo the goat**
 description: Use the new App Router with Next.js' and React's latest features, including Layouts, Server Components, Suspense, and more.
 ---
 
